# noxund

./: .env.example  .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/collection/: video-collection.armed  youtube-collection.armed
.github/workflows/: data-engine-tests.yml  entity-db-apply.yml  migrations-local-verify.yml  phase1-db-apply.yml  phase2-db-apply.yml  phase3-db-apply.yml  phase4-db-apply.yml  phase5-db-apply.yml  video-collection.yml  youtube-collection.yml
apps/web/: README.md  package.json  tailwind.config.ts
context/: 00_Product_Lead_Decision_Log.md  01_MVP_Scope_PRD.md  02_Stack_Infra_Architecture.md  03_Data_AI_Agents_Methodology.md  04_Database_Event_Model.md  05_Marketing_GTM_Validation.md  06_Execution_RACI_Backlog.md  07_Risks_Open_Decisions.md  NOXUND_Hotspot_Arquitetura_de_Agentes.md  README.md  Relatório Estratégico de Posicionamento — NOXUND.md
docs/agents/: README.md  (+18 more)
services/data-engine/: .env.example  README.md  pyproject.toml  requirements-collect.txt
services/data-engine/src/noxund_data_engine/: __init__.py  channel_collection.py  channel_filter.py  entity_resolution.py  opportunity.py  pipeline.py  postgres_entity_resolution.py  postgres_sg8.py  scoring.py  sg8_runner.py  video_collection.py
services/data-engine/tests/: test_channel_collection.py  test_channel_filter.py  test_entity_resolution.py  test_opportunity.py  test_postgres_sg8.py  test_repro_harness.py  test_scoring.py  test_sg8_runner.py  test_video_collection.py
supabase/: README.md  config.toml
(+171 files in other folders)
