[project]
name = "noxund-data-engine"
version = "0.1.0"
description = "NOXUND Data Engine — deterministic, auditable pipeline (Entity Resolution core)."
requires-python = ">=3.11"
# Entity Resolution currently uses only the Python standard library.
# No heavy libs, no Celery, no Redis, no ML libraries (see scope-guardrails.md).
dependencies = []

[project.optional-dependencies]
# Tests use stdlib unittest; optional tooling can be added only when justified.
dev = []

[tool.ruff]
target-version = "py311"
line-length = 100
